[gd_scene load_steps=37 format=3 uid="uid://eqccp7yiy6e1"]

[ext_resource type="Texture2D" uid="uid://robovlu1ixn1" path="res://Assets/sprites/knight.png" id="1_2jv4i"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_u8unt"]
[ext_resource type="Texture2D" uid="uid://blmgu5rfon48f" path="res://Assets/sprites/attack.png" id="2_wpa4y"]
[ext_resource type="AudioStream" uid="uid://cdvauymt216gr" path="res://Assets/sounds/jump.wav" id="3_f1tta"]
[ext_resource type="AudioStream" uid="uid://bisucorw7anyq" path="res://Assets/music/attack.mp3" id="4_hlb5i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yfi7y"]
atlas = ExtResource("2_wpa4y")
region = Rect2(0, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4jrg"]
atlas = ExtResource("2_wpa4y")
region = Rect2(42, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4es"]
atlas = ExtResource("2_wpa4y")
region = Rect2(84, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtnyo"]
atlas = ExtResource("2_wpa4y")
region = Rect2(126, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_altn0"]
atlas = ExtResource("1_2jv4i")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eul8o"]
atlas = ExtResource("1_2jv4i")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvig3"]
atlas = ExtResource("1_2jv4i")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jufk"]
atlas = ExtResource("1_2jv4i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpuvn"]
atlas = ExtResource("1_2jv4i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flcx7"]
atlas = ExtResource("1_2jv4i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2mf3"]
atlas = ExtResource("1_2jv4i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_53f2y"]
atlas = ExtResource("1_2jv4i")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtwg2"]
atlas = ExtResource("1_2jv4i")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uba0n"]
atlas = ExtResource("1_2jv4i")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2ip1"]
atlas = ExtResource("1_2jv4i")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4yx8"]
atlas = ExtResource("1_2jv4i")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0talo"]
atlas = ExtResource("1_2jv4i")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk2e1"]
atlas = ExtResource("1_2jv4i")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbch8"]
atlas = ExtResource("1_2jv4i")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bof1l"]
atlas = ExtResource("1_2jv4i")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsai3"]
atlas = ExtResource("1_2jv4i")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm0ct"]
atlas = ExtResource("1_2jv4i")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_teknm"]
atlas = ExtResource("1_2jv4i")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa4cv"]
atlas = ExtResource("1_2jv4i")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnetj"]
atlas = ExtResource("1_2jv4i")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msu2b"]
atlas = ExtResource("1_2jv4i")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_51fmy"]
atlas = ExtResource("1_2jv4i")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1e8s"]
atlas = ExtResource("1_2jv4i")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eb3o1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfi7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4jrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtnyo")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_altn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eul8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvig3")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jufk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpuvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flcx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2mf3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53f2y")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtwg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uba0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2ip1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4yx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0talo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk2e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbch8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bof1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsai3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm0ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teknm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa4cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnetj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msu2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51fmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1e8s")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ej30j"]
radius = 5.09902

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aesb8"]
size = Vector2(16, 7)

[node name="Player" type="CharacterBody2D"]
collision_mask = 30
script = ExtResource("1_u8unt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_eb3o1")
animation = &"die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ej30j")

[node name="Sounds" type="Node" parent="."]

[node name="attack" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_hlb5i")

[node name="Jump" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("3_f1tta")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12, -6)
shape = SubResource("RectangleShape2D_aesb8")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
